more friendly aside  for index page

--- a/static/dev/styles/main.scss
+++ b/static/dev/styles/main.scss
@@ -31,9 +31,10 @@ pre {
 
 aside {
   padding: 5px 15px;
-  color: #FFF;
-  background: #333;
+  color: #000;
+  background: #ededed;
   width: 90%;
   margin: 10px auto;
   text-align: center;
+  box-shadow: 0 0 1px 1px #ccc;
 }
